Added styling to tvshows li

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -17,3 +17,8 @@ body {
     padding: 0;
     box-shadow: 0 0 0 20px rgba(0, 0, 0, 0.05);
 }
+
+#tvshows li {
+    border-bottom: 1px solid #efefef;
+    padding: 20px;
+}
