Changed background and changed tvshows to tvShows

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     font-family: sans-serif;
-    background: url("https://mycimmykindalife.files.wordpress.com/2015/12/tv-show-collage-part1.jpg");
+    background: url("https://media.gq.com/photos/5dfab9fdcfe9ed0008dc11d9/master/pass/BestShows-Edit.jpg");
     background-size: cover;
     display: flex;
     align-items: center;
